# Kidney-stone-prediction

./: Dockerfile  README.md  app.py  docker-compose.yml  model.ipynb  model.pkl  pyproject.toml  requirements.txt
static/css/: style.css
templets/: index.html  predict.html
